# config/swagger.json
@@ -1,7 +1,8 @@
 {
   "swagger": "2.0",
   "info": {
-    "title": "Express Typescript Skeleton",
+    "title": "First CRUD",
+    "version": "1.0"
   },
   "schemes": [
     "http"
@@ -13,14 +14,386 @@
     "application/json"
   ],
   "paths": {
-    "/": {
-      "get": {
-        "summary": "Hello World",
-        "operationId": "helloWorld",
+    "/login": {
+      "post": {
+        "summary":"Login with user",
+        "parameters": [
+          {
+            "in": "body",
+            "name": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "email": {
+                  "type":"string"
+                },
+                "password": {
+                  "type":"string"
+                }
+              },
+              "required": ["email", "password"]
+            }
+          }
+        ],
         "responses": {
           "200": {
-            "description": "Return with Hello World message"
+            "description": "Token with user",
+            "schema": {
+              "type":"object",
+              "properties": {
+                "token": {
+                  "type":"string"
+                },
+                "user": {
+                  "$ref": "#definitions/User"
+                }
+              }
+            }
           }
+        }
+      }      
+    },
+    "/group": {
+      "get": {
+        "summary": "Get all groups",
+        "parameters": [
+          {
+            "in": "header",
+            "name": "Authorization",
+            "type": "string"
+          },
+          {
+            "in": "query",
+            "name": "q",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "",
+            "schema": {
+              "type": "array",
+              "items": {
+                "$ref": "#definitions/Group"
+              }
+            }
+          }
+        }
+      },
+      "post": {
+        "summary": "Create group",
+        "parameters": [
+          {
+            "in": "header",
+            "name": "Authorization",
+            "type": "string"
+          },
+          {
+            "in": "body",
+            "name": "body",
+            "schema": {
+              "properties": {
+                "name": {
+                  "type": "string"
+                },
+                "description": {
+                  "type": "string"
+                },
+                "location": {
+                  "type": "string"
+                },
+                "maximalSize": {
+                  "type": "integer"
+                }
+              },
+              "required": [
+                "name",
+                "description",
+                "location",
+                "maximalSize"
+              ]
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": ""
+          }
+        }
+      }
+    },
+    "/group/{id}": {
+      "get": {
+        "summary": "Get group by ID",
+        "parameters": [
+          {
+            "in": "header",
+            "name": "Authorization",
+            "type": "string"
+          },
+          {
+            "in": "path",
+            "name": "id",
+            "type": "string",
+            "required": true
+          }
+      ],
+        "responses": {
+          "200": {
+            "description": "Return with Group object",
+            "schema":{
+              "$ref": "#definitions/Group"
+            }
+          }
+        }
+      },
+      "put": {
+        "summary": "Modify group",
+        "parameters": [
+          {
+            "in": "header",
+            "name": "Authorization",
+            "type": "string"
+          },
+          {
+            "in": "path",
+            "name": "id",
+            "type": "string",
+            "required": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": ""
+          }
+        }
+      },
+      "delete": {
+        "summary": "Delete group",
+        "parameters": [
+          {
+            "in": "header",
+            "name": "Authorization",
+            "type": "string"
+          },
+          {
+            "in": "path",
+            "name": "id",
+            "type": "string",
+            "required": true
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": ""
+          }
+        }
+      }
+    },
+    "/user": {
+      "get": {
+        "summary": "Get all users",
+        "parameters": [
+          {
+            "in": "header",
+            "name": "Authorization",
+            "type": "string"
+          },
+          {
+            "in": "query",
+            "name": "q",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "",
+            "schema": {
+              "type": "array",
+              "items": {
+                "$ref": "#definitions/User"
+              }
+            }
+          }
+        }
+      },
+      "post": {
+        "summary": "Create user",
+        "parameters": [
+          {
+            "in": "body",
+            "name": "body",
+            "schema": {
+              "properties": {
+                "password": {
+                  "type": "string"
+                },
+                "firstName": {
+                  "type": "string"
+                },
+                "lastName": {
+                  "type": "string"
+                },
+                "email": {
+                  "type": "string"
+                },
+                "age": {
+                  "type":"string"
+                }
+              },
+              "required": [
+                "password",
+                "firstName",
+                "lastName",
+                "email",
+                "age"
+              ]
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": ""
+          }
+        }
+      }
+    },
+    "/user/{id}": {
+      "get":{
+        "summary": "Get user by ID",
+        "parameters": [
+          {
+            "in": "path",
+            "name": "id",
+            "type": "string",
+            "required": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Return with User object",
+            "schema":{
+              "$ref": "#definitions/User"
+            }
+          }
+        }
+      },
+      "put": {
+        "summary": "Modify user",
+        "parameters": [
+          {
+            "in": "path",
+            "name": "id",
+            "type": "string",
+            "required": true
+          },
+          {
+            "in": "body",
+            "name": "body",
+            "schema": {
+              "$ref": "#definitions/UserRequest"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": ""
+          }
+        }          
+      },
+      "delete": {
+        "summary": "Delete user",
+        "parameters": [
+          {
+            "in": "path",
+            "name": "id",
+            "type": "string",
+            "required": true
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": ""
+          }
+        }
+      }
+    }
+  },
+  "definitions": {
+    "Group": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "integer"
+        },
+        "name": {
+          "type": "string"
+        },
+        "description": {
+          "type": "string"
+        },
+        "location": {
+          "type": "string"
+        },
+        "maximalSize": {
+          "type": "integer"
+        }
+      }
+    },
+    "GroupRequest": {
+      "type": "object",
+      "properties": {
+        "name": {
+          "type": "string"
+        },
+        "description": {
+          "type": "string"
+        },
+        "location": {
+          "type": "string"
+        },
+        "maximalSize": {
+          "type": "integer"
+        }
+      },
+      "required": [
+        "name",
+        "description",
+        "location",
+        "maximalSize"
+      ]
+    },
+    "User": {
+      "type":"object",
+      "properties": {
+        "id": {
+          "type":"number"
+        },
+        "firstName": {
+          "type":"string"
+        },
+        "lastName": {
+          "type":"string"
+        },
+        "fullName": {
+          "type":"string"
+        }
+      }
+    },
+    "UserRequest": {
+      "type":"object",
+      "properties": {
+        "firstName": {
+          "type": "string"
+        },
+        "lastName": {
+          "type": "string"
+        },
+        "email": {
+          "type": "string"
+        },
+        "age": {
+          "type":"string"
         }
       }
     }
